--- a/manuscrit_G_LEFEBVRE/main.tex
+++ b/manuscrit_G_LEFEBVRE/main.tex
@@ -117,6 +117,7 @@
 \usepackage{subfiles}
 %%\usepackage{etoolbox}
 \usepackage{tikz,tkz-tab}
+\usetikzlibrary{spy}
 \usepackage{pgfplots}
 
 %\usepackage{titletoc}
@@ -386,6 +387,22 @@
 %\chapter{Remerciements}
 %\renewcommand\chaptername{Remerciements}
 \input{remerciements.tex}
+
+%\section*{Remerciements}
+%
+%Les données médicales utilisées dans cet article ont été fournies aux auteurs  par l'Institut Bergoni\'e, F-33000, Bordeaux, France. Nous remercions l'Institut Bergoni\'e pour sa collaboration et particulièrement l'oncologue MD Binh Bui.
+%
+%
+%Cette étude a été soutenue dans le cadre du LABEX TRAIL, ANR-10-LABX-0057 avec le soutien financier de l'Etat Francais, géré par l'Agence Nationale de Recherche (ANR) de France dans le cadre des "Investissements d'avenir" du Programme IdEx  (ANR-10-IDEX-03-02).
+%
+%Les expérimentations présentées dans cet article ont été réalisées en utilisant la plateforme expérimentale PlaFRIM, développée par l'action de développement  Inria DIHPES avec le support du LABRI et de l'IMB et d'autres entités~: Conseil R\'egional d'Aquitaine, FeDER, Universit\'e de Bordeaux et CNRS (\textit{cf.} https://plafrim.bordeaux.inria.fr/)
+%
+%
+%Le Travail de Patricio Cumsille (PC) a été partiellement soutenu par le Programme de Recherche Associative (PIA) du Conicyt avec le financement numéro FB0001. Le travail de PC a aussi été partiellement soutenu par l'Université de B\'{\i}o-B\'{\i}o avec les financements DIUBB 121909 GI/C et DIUBB 122109 GI/EF.
+%
+%
+%Les auteurs remercient très chaleureusement Dr H. Fathallah-Shaykh pour ses discussions et ses conseils qui ont significativement contribués à l'amélioration de la qualité de cet article. 
+
 
 %%\chapter{Conclusion et discussion}
 
